--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="background_app">#0E0B20</color>
     <color name="background_button">#4b4b5a</color>
     <color name="title_text">#FF8D8E98</color>
+    <color name="background_calculate">#431887</color>
 </resources>
