--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#00ff00</color>
+    <color name="light_blue">#3599EB</color>
+    <color name="orange">#ffa500</color>
+    <color name="red">#FF0000</color>
 
     <color name="background_component">#1D1E33</color>
     <color name="background_component_selected">#FF111328</color>
